# check_patroni

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  config.ini  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: lint.yml  tests.yml
check_patroni/: __init__.py  cli.py  cluster.py  convert.py  node.py  types.py
doc/: make_readme.sh
docs/: make_readme.sh
test/: test_cluster_config_has_changed.py  test_cluster_has_leader.py  test_cluster_has_replica.py  test_cluster_is_in_maintenance.py  test_cluster_node_count.py  test_node_is_alive.py  test_node_is_pending_restart.py  test_node_is_primary.py  test_node_is_replica.py  test_node_patroni_version.py  test_node_tl_has_changed.py  tools.py
test/json/: cluster_config_has_changed.json  cluster_has_leader_ko.json  cluster_has_replica_ko.json  cluster_has_replica_ko_lag.json  cluster_is_in_maintenance_ko.json  cluster_node_count.json  cluster_node_count_ok.json  cluster_node_count_running_critical.json  cluster_node_count_warning.json  node_is_pending_restart_ko.json  (+1 more)
tests/: __init__.py  conftest.py  test_api.py  test_cluster_config_has_changed.py  test_cluster_has_leader.py  test_cluster_has_replica.py  test_cluster_has_scheduled_action.py  test_cluster_is_in_maintenance.py  test_cluster_node_count.py  test_node_is_alive.py  test_node_is_leader.py  test_node_is_pending_restart.py  test_node_is_primary.py  test_node_is_replica.py  test_node_patroni_version.py  test_node_tl_has_changed.py  tools.py
vagrant/: LICENSE  README.md  Vagrantfile  check_patroni.sh
(+40 files in other folders)
